fix(css): Fix shifting content and header

--- a/src/components/layout-elements/Content/Content.module.scss
+++ b/src/components/layout-elements/Content/Content.module.scss
@@ -1,6 +1,7 @@
 @import '../../../assets/styles/mixins.scss';
 
 .content {
+	flex: 1;
 	height: 100%;
 	width: 100%;
 }
