--- a/src/components/layout-elements/Layout/Layout.module.scss
+++ b/src/components/layout-elements/Layout/Layout.module.scss
@@ -2,6 +2,7 @@
 @import '../../../assets/styles/mixins.scss';
 
 .layout {
-	flex: 1;
-	@include flex($justify-content: space-between);
+	@include flex($justify-content: center);
+	min-height: 100vh;
+	padding-left: calc(100vw - 100%);
 }
